--- a/Source/MaxLand/Projects/MaxLandApp/OnEvent.cls
+++ b/Source/MaxLand/Projects/MaxLandApp/OnEvent.cls
@@ -8,38 +8,31 @@ BEGIN
 END
 Attribute VB_Name = "OnEvent"
 Attribute VB_GlobalNameSpace = False
-Attribute VB_Creatable = False
+Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = False
+Attribute VB_Exposed = True
 Option Explicit
 
-Private pAppliesTo As String
-Private pRunMethod As String
+Public Enum EventBehavior
+    Rapid = 0
+    Press = 1
+    Locks = 2
+End Enum
+
+
+Private pBehavior As EventBehavior
+Private pAppliesTo As Variant
+Private pRunScript As String
 Private pStartLine As String
-Private pRunFlag As Boolean
+Private pEventFlags As Integer
 
 
-Friend Property Get RunFlag() As Boolean
-    RunFlag = pRunFlag
+Friend Property Get EventFlags() As Integer
+    EventFlags = pEventFlags
 End Property
-Friend Property Let RunFlag(ByVal RHS As Boolean)
-    pRunFlag = RHS
+Friend Property Let EventFlags(ByVal RHS As Integer)
+    pEventFlags = RHS
 End Property
-
-
-Public Property Get AppliesTo() As String
-    AppliesTo = pAppliesTo
-End Property
-Public Property Let AppliesTo(ByVal RHS As String)
-    pAppliesTo = RHS
-End Property
-Public Property Get RunMethod() As String
-    RunMethod = pRunMethod
-End Property
-Public Property Let RunMethod(ByVal RHS As String)
-    pRunMethod = RHS
-End Property
-
 Friend Property Get StartLine() As String
     StartLine = pStartLine
 End Property
@@ -48,3 +41,26 @@ Friend Property Let StartLine(ByVal RHS As String)
 End Property
 
 
+
+Public Property Get Behavior() As EventBehavior
+    Behavior = pBehavior
+End Property
+Public Property Let Behavior(ByVal RHS As EventBehavior)
+    pBehavior = RHS
+End Property
+Public Property Get AppliesTo() As Variant
+    AppliesTo = pAppliesTo
+End Property
+Public Property Let AppliesTo(ByVal RHS As Variant)
+    pAppliesTo = RHS
+End Property
+Public Property Get RunScript() As String
+    RunScript = pRunScript
+End Property
+Public Property Let RunScript(ByVal RHS As String)
+    pRunScript = RHS
+End Property
+
+Private Sub Class_Initialize()
+    pBehavior = 1
+End Sub
